# logbook

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: logbook.py
src/interfaces/: db.py  fs.py
src/subcommands/: config.py  read.py  write.py
src/subcommands/subcommands/config/: delete.py  tag.py
src/utilities/: display.py  misc.py  timekeeping.py
